# ebi-manga-reader

./: .gitignore  Cargo.toml
ebi/: Cargo.toml
ebi_archive/: Cargo.toml
ebi_archive/examples/: opex.rs
ebi_archive/lib/: downloader.rs  errors.rs  lib.rs
ebi_sources/: Cargo.toml
ebi_sources/examples/: opex.rs  sources.rs  yabu.rs
ebi_sources/lib/: chapter.rs  client.rs  errors.rs  lib.rs  manga.rs  source.rs
ebi_sources/lib/opex/: chapter.rs  client.rs  manga.rs  mod.rs  parser.rs  source.rs
ebi_sources/lib/yabu/: chapter.rs  client.rs  manga.rs  mod.rs  parser.rs  source.rs
src/: args.rs  errors.rs  main.rs
src/archive/: downloader.rs  errors.rs  mod.rs
src/sources/: chapter.rs  manga.rs  mod.rs  source.rs
src/sources/opex/: chapter.rs  client.rs  manga.rs  mod.rs
src/sources/yabu/: chapter.rs  client.rs  manga.rs  mod.rs
