[package]
name = "ebi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.1"
regex = "1.5"
anyhow = "1.0"
futures = "0.3"
scraper = "0.12"
cssparser = "0.27"
selectors = "0.22"
serde_json = "1.0"
async-trait = "0.1"
serde = { version = "1.0",  features = ["derive"] }
reqwest = { version = "0.11", features = ["default-tls", "json"] }
tokio = { version = "1.17", features = ["rt-multi-thread", "macros"] }
