[package]
name = "ebi_archive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "bin_ebi_archive"
path = "examples/opex.rs"


[lib]
name = "ebi_archive"
path = "lib/lib.rs"

[dependencies]
tokio = { version = "1.17.0", features = ["rt-multi-thread", "macros"] }
ebi_sources = { path = "../ebi_sources" }