[package]
name = "ebi_archive"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ebi-archiver"
path = "bin/main.rs"

[lib]
name = "ebi_archive"
path = "lib/lib.rs"

[dependencies]
clap = "3.1.17"
reqwest = { version = "0.11", features = ["default-tls", "json"] }
tokio = { version = "1.17.0", features = ["rt-multi-thread", "macros"] }
ebi_sources = { path = "../ebi_sources" }
futures = "0.3.21"
