[package]
name = "ebi_sources"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
#[[bin]]
#name = "bin_ebi_sources"
#path = "bin/main.rs"


[lib]
name = "ebi_sources"
path = "lib/lib.rs"

[dependencies]
cssparser = "0.27"
reqwest = { version = "0.11", features = ["default-tls", "json"] }
tokio = { version = "1.17", features = ["rt-multi-thread", "macros"] }
scraper = "0.12"
selectors = "0.22"
serde_json = "1.0"
async-trait = "0.1"
serde = { version = "1.0",  features = ["derive"] }